# GDOU-net-login

./: .gitignore  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report_zh.md
.github/workflows/: ci.yml  desktop-release.yml
desktop/: Cargo.toml  README.md  build.rs  tauri.conf.json
desktop/capabilities/: default.json
desktop/icons/: generate_icon.py
desktop/src/: config.rs  gui.rs  main.rs  srun.rs
frontend/: index.html  main.js  package-lock.json  package.json  vite.config.js
frontend/src/: main.jsx  styles.css
scripts/: quick_probe.ps1
