[package]
name = "gdou-net-login"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0-only"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
debug = 0
strip = "symbols"
incremental = false

[dependencies]
anyhow = "1"
base64 = "0.22"
directories = "5"
futures = "0.3"
hmac = "0.12"
md-5 = "0.10"
keyring = "2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
